fix swagger endpoint 5, works well
